Migrated to Java 21